fix: github events overflow styling

--- a/src/views/components/github/github.styl
+++ b/src/views/components/github/github.styl
@@ -20,6 +20,8 @@
   font-size 11px
   display flex
   a
+    text-overflow hidden
+    overflow hidden
     color $nanoSoftBlue
     &:hover
       text-decoration underline
